src/tests/fixtures/typename/PropertyTypenameDoesNotMatchDeclaredName.ts.expected
-----------------
INPUT
----------------- 
/** @gqlType User */
export class UserModel {
  __typename = "UserModel" as const;
  /** @gqlField */
  name: string = "Alice";
}

-----------------
OUTPUT
-----------------
src/tests/fixtures/typename/PropertyTypenameDoesNotMatchDeclaredName.ts:3:16 - error: Expected `__typename` property initializer to be `"User"`, found `"UserModel"`. This lets Grats know that the GraphQL executor will be able to derive the type of the object at runtime.

3   __typename = "UserModel" as const;
                 ~~~~~~~~~~~
